# onboarding-backend

./: .env.smaple  README.md  awssync.sh  cl_survey.py  cl_survey_test.py  demo.txt  pyproject.toml  test.py
alembic/versions/: 0e0ea10496ab_added_one_column.py  24ac616b760a_altered_tables.py  c8a8af19ff84_added_tables.py  e817869fdb4b_3rd_version.py  ed0469b32b52_cascade_demo.py
app/: main.py
app/CustomErrors/HTTPErrors/: http_base_error.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  cache.py  designations.py  kt_links.py  module.py  permission.py  projects.py  req_status.py  roles.py  tools.py  (+1 more)
app/assets/: kt_links.json  template.json
app/core/: cache.py  config.py  helper.py  permission_checker.py  security.py
app/crud/: __init__.py  base.py  crud_designations.py  crud_kt_links.py  crud_module.py  crud_permission.py  crud_projects.py  crud_req_status.py  crud_role_permission.py  crud_roles.py  crud_tools.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/middleware/: auth_middleware.py  permission_middleware.py
app/models/: designation_tools.py  designations.py  kt_links.py  module.py  permission.py  projects.py  request_status.py  role_permission.py  roles.py  tools.py  user.py
app/permissions/: has_permissions.py  user_permissions.py
app/schemas/: __init__.py  designation_tools.py  designations.py  kt_links.py  module.py  permission.py  projects.py  request_status.py  role_permission.py  roles.py  tools.py  user.py
app/util/: common.py  json_encode_util.py  query.py  user_util.py
(+18 files in other folders)
