[tool.poetry]
name = "app"
version = "0.0.1"
description = "Ultimate FastAPI Tutorial"
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
tenacity = "^8.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^0.19.2"
redis = "^4.2.0"
bcrypt = "^3.2.0"
pandas = "^1.4.2"
sklearn = "^0.0"
boto3 = "^1.22.7"
pygam = "^0.8.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
pypiwin32 = "^223"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
